SUBDIRS = src
#ACLOCAL_AMFLAGS = -I m4

.PHONY:clean
clean:	distclean
	find . -name Makefile.in -exec rm -rf {} \;
	rm -rf autom4te.cache
	rm -f aclocal.m4 autoscan.log config.h config.log config.sub configure depcomp Makefile compile config.h.in config.status install-sh missing stamp-h1 config.guess config.h.in~ ltmain.sh
	
